[fix] Borders on print
Borders were not showing when printing, it's now fixed.

--- a/app/print.css
+++ b/app/print.css
@@ -26,4 +26,8 @@
   .certifications {
     font-size: 19px;
   }
+
+  .border-print {
+    border: 2px solid black;
+  }
 }
